hphp/hack/test/typecheck/fun_decl_after_use.php
<?hh
use function SomeNS\foo;

function foo(): void {}
